some fucking changes idk what changed maybe new Me endpoint that return user profile - groups, tasks etc.
