# docs/swagger.yaml
@@ -328,6 +328,33 @@ paths:
       summary: Запрос состояния сервиса
       tags:
       - Server
+  /users/me:
+    get:
+      consumes:
+      - text/plain
+      operationId: users_me
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/model.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Get summary info about user.
+      tags:
+      - Users
   /users/register:
     post:
       consumes:
